--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sequelize": "^6.37.5"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npm install mysql2"
   }
 }
