--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.0",
+    "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "sequelize": "^6.37.5"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "postinstall": "npm install mysql2"
   }
 }
